@@ -267,7 +267,7 @@ public class AppUserServiceImpl implements AppUserService {
                 user.getId(),
                 user.getUsername(),
                 user.getEmail(),
-                user.getRoles().getLast().getName(),
+                user.getRoles().get(user.getRoles().size()-1).getName(),
                 user.getOrganisation().getName(),
                 user.getOrgRank().name()
         );
@@ -343,5 +343,7 @@ public class AppUserServiceImpl implements AppUserService {
     }
 
 
-
+    public void banUser(String name, String username) {
+        throw new ResponseStatusException(HttpStatus.NOT_IMPLEMENTED,"Ban user function not implemented");
+    }
 }
